@@ -1,6 +1,8 @@
 package addsynth.energy.gameplay.machines.compressor;
 
+import java.util.Random;
 import javax.annotation.Nullable;
+import addsynth.core.util.math.random.RandomUtil;
 import addsynth.energy.gameplay.config.Config;
 import addsynth.energy.gameplay.machines.compressor.recipe.CompressorRecipes;
 import addsynth.energy.lib.tiles.machines.TileStandardWorkMachine;
@@ -16,15 +18,40 @@ import net.minecraft.util.text.TranslationTextComponent;
 
 public final class TileCompressor extends TileStandardWorkMachine implements INamedContainerProvider {
 
+  private int compress_step = -1;
+  private int temp_compress_step;
+  private static final int max_compress_steps = 3;
+  private static final Random random = new Random();
+
   public TileCompressor(){
     super(Tiles.COMPRESSOR, 1, CompressorRecipes.INSTANCE.getFilter(), 1, Config.compressor_data);
     inventory.setRecipeProvider(CompressorRecipes.INSTANCE);
   }
 
   @Override
+  protected final void machine_running(){
+    temp_compress_step = calculate_compress_step();
+    if(temp_compress_step != compress_step){
+      compress_step = temp_compress_step;
+      // 0.5 is the lowest pitch that can be produced using Minecraft's code
+      final float pitch = RandomUtil.getCentralDistribution(random, 0.05f, 0.53f); // range is between 0.48 and 0.58
+      world.playSound(null, pos, SoundEvents.BLOCK_ANVIL_PLACE, SoundCategory.BLOCKS, 0.25f, pitch);
+    }
+  }
+
+  private final int calculate_compress_step(){
+    return (int)((energy.getEnergy() * max_compress_steps) / energy.getCapacity());
+  }
+
+  @Override
   protected final void perform_work(){
-    world.playSound(null, pos, SoundEvents.BLOCK_ANVIL_PLACE, SoundCategory.BLOCKS, 0.7f, 0.5f); // lowest pitch can be
     inventory.finish_work();
+  }
+
+  @Override
+  public final void onLoad(){
+    super.onLoad();
+    compress_step = calculate_compress_step();
   }
 
   @Override
